# microsite

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  sample-project.toml  sample-site.pulumi.pass
docs/: README.md  acknowledgements.rst  concepts.rst  conf.py  getting-started.rst  index.rst  modules.rst  path.rst  publish-engines.rst  publish.rst  pulumi.rst  render-engines.rst  render.rst  util.rst
docs/_doctrees/: acknowledgements.doctree  concepts.doctree  environment.pickle  getting-started.doctree  index.doctree  microsite.doctree  modules.doctree  path.doctree  publish-engines.doctree  publish.doctree  pulumi.doctree  render-engines.doctree  render.doctree  util.doctree
microsite/: __main__.py  path.py  pulumi.py  util.py
microsite/publish/: README.md  __init__.py  s3.py
microsite/publish/static/pulumi/tb_pulumi/s3_website/templates/: __main__.py.j2  config.stack.yaml.j2
microsite/publish/static/pulumi/templates/: Pulumi.stack.yaml.j2  Pulumi.yaml.j2
microsite/pulumi_static/: tb_pulumi_s3_website.py.j2  tb_pulumi_s3_website.yaml.j2
microsite/render/: README.md  __init__.py  __main__.py  eng_markdown.py  markdown.py
microsite/render/styles/: desert.css  night-serif.css  night.css  plain-white.css
microsite/render/templates/: default.html.j2
publisher/: README.md  __main__.py
renderer/: README.md  __main__.py
sample-site/: index.md  page2.md
sample-site/dir/: page3.md
