[project]
name = "microsite"
description = "Tools to make the small web accessible"
version = "0.0.1"
readme = "README.md"
authors = [
    {name="Ryan Jung", email="ryanjjung@gmail.com"}
]
keywords = ["smallweb", "website", "publishing"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4,<5",
    "Jinja2>=3.1.6,<4.0",
    "Markdown>=3.8.2,<4.0",
    "python-magic>=0.4.27,<1.0",
    "tb_pulumi @ git+https://github.com/thunderbird/pulumi.git@v0.0.14",
    "toml>=0.10.2,<1.0",
]

[project.urls]
repository = "https://github.com/ryanjjung/microsite"
issues = "https://github.com/ryanjjung/microsite/issues"

[project.optional-dependencies]
dev = [
    "bpython",
    "ruff>=0.12,<1.0"
]
